# ffi6_uwb_drone_localization

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.json  dwm_uart_reader.hpp  main.cpp
Anchor/: README.md
Anchor/ESP8266_UWB_Anchor/: README.md  TODO  platformio.ini
Anchor/ESP8266_UWB_Anchor/include/: DW1000.hpp  DW1000Ranging.hpp  Mode.hpp  config_template.hpp  dw1000_modes.h  dw1000_time.hpp  logger.hpp  wifi_handler.hpp
Anchor/ESP8266_UWB_Anchor/src/: DW1000.cpp  DW1000Ranging.cpp  DW1000RangingAnchor.cpp  DW1000RangingTag.cpp  dw1000_modes.cpp  dw1000_time.cpp  logger.cpp  main.cpp  wifi.cpp
Anchor/ESP8266_UWB_Anchor/src/dw1000/: DW1000.cpp  DW1000.hpp
Anchor/ESP8266_UWB_Anchor/src/shared/inc/: twr_dw1000_frame_spec.hpp
Anchor/ESP8266_UWB_TAG/include/: config_template.hpp  logger.hpp  wifi_handler.hpp
Anchor/ESP8266_UWB_TAG/src/: logger.cpp  main.cpp  wifi.cpp
Anchor/admin_shell/: connect.ps1  connect.sh
Anchor/flask_logging_server/: Dockerfile  REAME.md  hexbinary.py  main.py  requirements.txt  start.sh
Anchor/flask_logging_server/templates/: logs.html
Anchor/uwb_anchor_service/: CMakeLists.txt
Anchor/uwb_anchor_service/config/: uwb_anchor.conf
Anchor/uwb_anchor_service/inc/: uwb_anchor_service.hpp
Anchor/uwb_anchor_service/src/: uwb_anchor_service.cpp
Anchor/uwb_anchor_service/systemd/: uwb_anchor.service
Drone/: README.md  coords_calc.cpp  coords_calc.py
Drone/coords_calc/: coords_calc.cpp  coords_calc.h  test_coords_calc.cpp
Drone/dwm1000_control/: .gitignore  CMakeLists.txt  README.md
Drone/dwm1000_control/inc/: dw1000_modes.h  dw1000_time.hpp  dwm1000_ctrl.hpp  dwm1000_device.hpp  dwm1000_ranging.hpp  dwm1000_ranging_anchor.hpp  ws_logger.hpp
Drone/dwm1000_control/src/: dw1000_modes.cpp  dw1000_ranging.cpp  dw1000_time.cpp  dwm1000_ctrl.cpp  dwm1000_ranging.cpp  dwm1000_ranging_anchor.cpp  dwm1000_ranging_drone.cpp  main.cpp  ws_logger.cpp
Drone/dwm1000_control/test/: dw1000_time_test.cpp  positioning_test.cpp  ranging_test_accuracy.cpp
Drone/visualize_positioning/: vpos.py
shared/inc/: anchor_addresses.hpp  constants.hpp  helpers.hpp  twr_dw1000_frame_spec.hpp
